# Simplers

./: Cargo.toml  potential_algorithmic_improvements.md  readme.md  rustfmt.toml  targets.md
src/: algorithm.rs  function.rs  lib.rs  main.rs  parameters.rs  point.rs  queue.rs  search_space.rs  simplex.rs
