[package]
name = "simplers_optimization"
version = "0.4.4"
authors = ["Nestor Demeure"]
edition = "2021"

# description of the crate
# see https://doc.rust-lang.org/cargo/reference/manifest.html#package-metadata
description = "A Rust implementation of the Simple(x) black-box optimization algorithm."
repository = "https://github.com/nestordemeure/Simplers"
documentation = "https://docs.rs/simplers_optimization"
readme = "readme.md"
keywords = ["optimization", "optimisation", "black-box", "global-optimization", "global-optimisation"]
categories = ["algorithms", "science"] # crates.io/category_slugs
license = "Apache-2.0"

[dependencies]
priority-queue = "1.2.0"
ordered-float = "3.4.0"
num-traits = "0.2.14"